--- a/subprojects/tesis/solucion.tex
+++ b/subprojects/tesis/solucion.tex
@@ -28,12 +28,24 @@ In order to achieve this, the Artifact Detection System must first extract featu
 
 \end{figure}
 
-This structure was used in the dispTEC2-2022 RDF system. The Rangerx system maintains this structure and improves over the previous system by 
+This structure was used in the dispTEC2-2022 RDF system. The Rangerx system maintains this structure and improves over the previous system by increasing the training dataset size, by redesigning the Feature Extractor and by replacing the previous RDF library with the Ranger C++ Core Library.
+
+Section \ref{sec:sol_dataset} details the dataset construction and expansion procedure. Section \ref{sec:sol_metrics} explains the main strategies Rangerx uses to improve performance on the detection task, as measured by the Precision and Recall Metrics. This section details out the Rangerx Feature Extractor design. Section \ref{sec:sol_speed} discusses the optimizations used in Rangerx to improve on the previous system's speed. This section justifies the use of Ranger as the new RDF backend. Section \ref{sec:sol_maskgen} is a brief explanation of the Rangerx Mask Generator (This Generator is identical to the one used in dispTEC2-2022). Section \ref{sec:sol_maskgen} is a brief explanation of the Rangerx Mask Generator (This Generator is identical to the one used in dispTEC2-2022). Finally, Section \ref{sec:sol_traintest} elaborates on the training and testing procedures.
+
+\section{Building and Expanding the Dataset}
+\label{sec:sol_dataset}
+
+
+
+\section{Improving the Detection Metrics}
+\label{sec:sol_metrics}
 
 \subsection{The Feature Extractor}
 \label{sec:sol_features}
 
-The feature extractor
+Input frames follow the I420 format. Rangerx only considers the luma component of the frame, since luma statistics correlate with artifacts much better than chroma statistics.
+
+Figure \ref{fig:extractor_steps} describes the feature extraction strategy used in Rangerx. The new feature extractor applies a 2D High Pass Filter on the input image, which outputs a horizontally filtered frame and a vertically filtered frame.
 
 \begin{figure} [!h]
   \centering
@@ -45,25 +57,16 @@ The feature extractor
 
 \end{figure}
 
-\subsection{The RDF Classifier}
+\section{Improving the Detection Speed}
+\label{sec:sol_speed}
+
+\subsection{The Ranger C++ Core Library}
 \label{sec:sol_rdf}
 
-\subsection{The Mask Generatorr}
+\section{The Mask Generator}
 \label{sec:sol_maskgen}
 
-\section{Training}
-\label{sec:sol_}
+\section{Training and Testing}
+\label{sec:sol_traintest}
 
 
-
-\section{Testing}
-\label{sec:intro_problem}
-
-\section{Video Artifact Detection}
-\label{sec:intro_problem}
-
-\section{Video Artifact Detection}
-\label{sec:intro_problem}
-
-\section{Video Artifact Detection}
-\label{sec:intro_problem}
