Add current gitignore and worklog progress

--- a/subprojects/bitacoras/semana_13.tex
+++ b/subprojects/bitacoras/semana_13.tex
@@ -45,18 +45,16 @@
       17/5/23 & 4.5 h & Tesis & Terminando introducción \\
       %thurs
       18/5/23 & 4 h & & Envío de primera versión de la introducción \\
-      %fri
-      19/5/23 & 0 h & Task 3 & Descripción \\
       %sat
-      20/5/23 & 4 h & Task 4 & Descripción \\
+      20/5/23 & 4 h & & Trabajando Solución \\
       %sun
-      21/5/23 & 4 h & Task 5 & Descripción \\
+      21/5/23 & 4 h & & Descripción \\
       %mon
-      22/5/23 & 4 h & Task 6 & Descripción \\
+      22/5/23 & 2 h & & Descripción \\
       %tues
-      23/5/23 & 4 h & Task 7 & Descripción \\
+      23/5/23 & 2 h & & Descripción \\
       %wed
-      24/5/23 & 0 h & Task 8 & Descripción \\
+      24/5/23 & 0 h & & Descripción \\
       \hline
       \textbf{Total} & 21 h \\
       \hline
