Update frameset diagram, intro and solution

--- a/subprojects/tesis/intro.tex
+++ b/subprojects/tesis/intro.tex
@@ -65,16 +65,16 @@ The artifact detection methods from \cite{Vranjes2018, Glavota2018} focus on fil
 \section{The dispTEC2-2022 project}
 \label{sec:intro_disptec}
 
-During 2022, RidgeRun LLC and SIPLab developed the dispTEC2-2022 project with the objective of building a Video Restoration System using DeepLearning. The project was developed on Nvidia's Jetson TX2. This system has a 256 CUDA-core GPU, 4 ARM CPUs and 2 Denver CPUs. The development of the image restoration stage of dispTEC2-2022 is detailed in \cite{Brenes2022}.
+During 2022, RidgeRun LLC and SIPLab developed the dispTEC2-2022 (Disptec) project with the objective of building a Video Restoration System using DeepLearning. The project was developed on the Nvidia Jetson TX2 Embedded System. This machine has a 256 CUDA-core GPU, a Quad-core ARM CPU and a Dual-core Denver CPU. Disptec found no activation method for the Denver CPU and the Jetson TX2 machine was effectively a 4-core machine.
 
-The resulting system was capable of processing a video frame by frame. For each frame it could simulate randomly linear H264 packet losses, generate a binary detection mask based on the ground truth artifact measure, and then feed it along with the lossy frame into an inpainter transformer to produce a restored frame. \cite{Brenes2022} optimized the model with pytorch and CUDA, as well as a number of arquitectural optimizations. He finally concluded that the restoration system could reach a framerate from 0.8 to 1.67 frames per second on the Nvidia Jetson TX2.
+The resulting system was composed of an Artifact Detection System and an Inpainter System \cite{Brenes2022}. The system was capable of processing a video frame by frame. For each frame it could simulate randomly linear H264 packet losses, generate a binary detection mask based on the ground truth artifact measure, and then feed it along with the lossy frame into an inpainter transformer to produce a restored frame. \cite{Brenes2022} optimized the Inpainter System through a series of arquitectural redesigns. He finally concluded that the system could reach a framerate from 0.8 to 1.67 frames per second on the Nvidia Jetson TX2, optimizing the Inpainter's Torch backend for the GPU with CUDA.
 
 However, this system cannot be used in practice because it relies on knowing the original frames in order to generate the binary detection masks. The system requires an artifact detector that can generate the masks from the lossy frames alone.
 
 \section{The Artifact Detector Problem}
 \label{sec:intro_problem}
 
-The dispTEC2-2022 Video Restoration System concluded without a proper artifact detector. Part of dispTEC2-2022 entailed the search and development of an apropiate artifact detector for the system. The artifact detector was expected to run on the CPU alone, in order not to interfere with the CUDA-accelerated inpainting model. As a first approach, the dispTEC2-2022 team implemented the Packet Loss Detection Algorithm (PLDA) from \cite{Vranjes2018}. When testing the algorithm inside a gstreamer element, the algorithm could process a 720p video at $23,0$ frames per second.  After extensive testing of the algorithm using the Non-dominated Sorting Genetic Algorithm (NSGA-II), the dispTEC2-2022 team found no suitable parameters that allowed the detector to perform well on the detection task.
+The dispTEC2-2022 Video Restoration System concluded without a proper artifact detector. Part of dispTEC2-2022 entailed the search and development of an apropiate artifact detector for the system. The artifact detector was expected to run on the ARM 4-core CPU alone, in order not to interfere with the CUDA-accelerated inpainting model and possibly decrease the inpainting speed. As a first approach, the dispTEC2-2022 team implemented the Packet Loss Detection Algorithm (PLDA) from \cite{Vranjes2018}. When testing the algorithm inside a gstreamer element, the algorithm could process a 720p video at $23,0$ frames per second.  After extensive testing of the algorithm using the Non-dominated Sorting Genetic Algorithm (NSGA-II), the dispTEC2-2022 team found no suitable parameters that allowed the detector to perform well on the detection task.
 
 The dispTEC2-2022 team also developed a second artifact detection approach based on Random Decision Forests (RDF) \cite{Breiman2001}. In this approach, the RDF classifiers operated directly on each raw video frame and could achieve slightly better detection results than a random classifier. This classifier was trained on 200 frames from a training dataset containing only 2 video content types. When testing the RDF approach inside a gstreamer element, the algorithm could process 720p video at $26,6$ frames per second.
 
